--- a/Unit_1/Week_3/Pilares de la Programación Orientada a Objetos (POO).ipynb
+++ b/Unit_1/Week_3/Pilares de la Programación Orientada a Objetos (POO).ipynb
@@ -147,10 +147,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c736e8e1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Contact' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m contact1 \u001b[38;5;241m=\u001b[39m Contact(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mJosé\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mjose@example.com\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      2\u001b[0m contact2 \u001b[38;5;241m=\u001b[39m Contact(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAna\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mana@example.com\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLista de contactos:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'Contact' is not defined"
+     ]
+    }
+   ],
    "source": [
     "contact1 = Contact(\"José\", \"jose@example.com\")\n",
     "contact2 = Contact(\"Ana\", \"ana@example.com\")\n",
@@ -158,6 +170,7 @@
     "print(\"Lista de contactos:\")\n",
     "for c in Contact.all_contacts:\n",
     "    print(c)\n",
+    "    print(type(c))\n",
     "    "
    ]
   },
@@ -757,7 +770,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Program_2",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -771,7 +784,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
