--- a/Unit_2/Week_2/NumPy_KNN_Semana2.ipynb
+++ b/Unit_2/Week_2/NumPy_KNN_Semana2.ipynb
@@ -19,9 +19,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array original:\n",
+      "[[[ 0  1  2  3]\n",
+      "  [ 4  5  6  7]\n",
+      "  [ 8  9 10 11]]\n",
+      "\n",
+      " [[12 13 14 15]\n",
+      "  [16 17 18 19]\n",
+      "  [20 21 22 23]]]\n",
+      "\n",
+      "Media por eje 0: [[ 6.  7.  8.  9.]\n",
+      " [10. 11. 12. 13.]\n",
+      " [14. 15. 16. 17.]]\n",
+      "\n",
+      "Media por eje 1: [[ 4.  5.  6.  7.]\n",
+      " [16. 17. 18. 19.]]\n",
+      "\n",
+      "Media por eje 2: [[ 1.5  5.5  9.5]\n",
+      " [13.5 17.5 21.5]]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -46,14 +71,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "dd1fde98",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Media por columnas: [183.33333333 210.         240.        ]\n",
+      "Desviación por filas: [20.54804668 24.49489743 24.49489743]\n",
+      "Mínimos por fila: [200 180 170]\n",
+      "Máximos por columna: [200 220 250]\n",
+      "Varianza por columnas: [155.55555556  66.66666667  66.66666667]\n"
+     ]
+    }
+   ],
    "source": [
     "# Ejemplo de operaciones estadísticas en matrices\n",
     "# Matriz de ejemplo\n",
-    "ventas = np.array([\n",
+    "import numpy as np\n",
+    "ventas = np.array(\n",
+    "    [\n",
     "    [200, 220, 250],\n",
     "    [180, 210, 240],\n",
     "    [170, 200, 230]\n",
@@ -379,7 +418,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Program_2",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -393,7 +432,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
