--- a/Unit_2/Week_3/Notebook_U2_T2_S1.ipynb
+++ b/Unit_2/Week_3/Notebook_U2_T2_S1.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,8 +33,43 @@
     "arr1d = np.arange(10)\n",
     "arr2d = np.arange(20).reshape(4, 5)\n",
     "arr3d = np.arange(2*3*4).reshape(2, 3, 4)\n",
-    "\n",
-    "arr1d, arr2d, arr3d.shape"
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array unidimensional:\n",
+      "[0 1 2 3 4 5 6 7 8 9]\n",
+      "Array bidimensional:\n",
+      "[[ 0  1  2  3  4]\n",
+      " [ 5  6  7  8  9]\n",
+      " [10 11 12 13 14]\n",
+      " [15 16 17 18 19]]\n",
+      "Array tridimensional:\n",
+      "[[[ 0  1  2  3]\n",
+      "  [ 4  5  6  7]\n",
+      "  [ 8  9 10 11]]\n",
+      "\n",
+      " [[12 13 14 15]\n",
+      "  [16 17 18 19]\n",
+      "  [20 21 22 23]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (\"Array unidimensional:\")\n",
+    "print (arr1d)\n",
+    "print (\"Array bidimensional:\")\n",
+    "print (arr2d)\n",
+    "print (\"Array tridimensional:\")\n",
+    "print (arr3d)"
    ]
   },
   {
@@ -71,9 +106,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "arr1d[2:7:2] = [2 4 6]\n",
+      "arr1d[::-1] = [9 8 7 6 5 4 3 2 1 0]\n",
+      "arr2d[1:3, 2:5] =\n",
+      " [[ 7  8  9]\n",
+      " [12 13 14]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Slicing básico\n",
     "print(\"arr1d[2:7:2] =\", arr1d[2:7:2])\n",
@@ -135,13 +182,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.9"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
