--- a/Introduccion_POO_Python_Notebook_completo.ipynb
+++ b/Introduccion_POO_Python_Notebook_completo.ipynb
@@ -25,7 +25,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 17,
+            "execution_count": null,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -41,12 +41,16 @@
                 "        self.oranges.append(orange)\n",
                 "        orange.basket = self\n",
                 "    def countOranges(self):\n",
-                "        print(\"Tengo: \", len(self.oranges))"
+                "        print(\"Tengo: \", len(self.oranges))\n",
+                "\n",
+                "    def __str__(self):\n",
+                "        return \"Hay {} naranjas en la cesta\".format(len(self.oranges))\n",
+                "    \n"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 18,
+            "execution_count": 2,
             "id": "4d126db9",
             "metadata": {},
             "outputs": [
@@ -67,7 +71,9 @@
                 "\n",
                 "B1.add_orange(O1)\n",
                 "\n",
-                "B1.countOranges()\n"
+                "B1.countOranges()\n",
+                "\n",
+                "B1.add_orange(On)\n"
             ]
         },
         {
@@ -362,7 +368,7 @@
     ],
     "metadata": {
         "kernelspec": {
-            "display_name": "Program_2",
+            "display_name": "base",
             "language": "python",
             "name": "python3"
         },
@@ -376,7 +382,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.12.9"
+            "version": "3.12.7"
         }
     },
     "nbformat": 4,
